feat: 更好看的滚动条
Signed-off-by: baizhi958216 <1475289190@qq.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 *{
     font-family: 'misans';
 }
+
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(125,211,252);
+    border-radius: 10px;
+}
